Fixed alignment for name titles
- Fixed title alignment
- Improved mobile alignment / image width.

--- a/assets/scss/_adhoc.scss
+++ b/assets/scss/_adhoc.scss
@@ -44,7 +44,20 @@ h2 {
 }
 
 h3 {font-weight: bold; font-weight: 500; font-size: em-calc(18); margin: 0; }
-h4 {font-weight: 500; font-size: em-calc(26); color: $adhoc-body-content-color; line-height: 1.2em; margin-bottom: 0; padding-bottom: 0;}
+h4 {
+  font-weight: 500;
+  font-size: em-calc(20);
+  color: $adhoc-body-content-color;
+  line-height: 1.2em;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  @media #{$small} {font-size: em-calc(20);}
+  @media #{$medium} {font-size: em-calc(26);}
+  }
+
+
+
+
 h5 {font-weight: 500; margin: .35em 0 .5em 0; padding: 0; font-weight: 300; font-size: 1em; color: #fff; background: $adhoc-primary-color; display: inline-block; }
 
 /*** Logo / header ***/
@@ -222,7 +235,8 @@ html.lt-ie9 .banner h2 span {
 .head-shot {
   position: relative;
   top: 0;
-  margin: .35em 0;
+  margin: .35em 0 2.5em 0;
+  @media #{$small} {margin: .35em 0 0 0;}
   display: block;
 
   h5 {
@@ -241,7 +255,7 @@ html.lt-ie9 .banner h2 span {
   }
 
   img {
-
+    width: 100%;
     -webkit-filter: grayscale(.8);
 
     -webkit-transition: all 0.2s ease-in-out;
